fix: fix issue with mobile navbar to stretch to full screen

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Bellefair&family=Lato:wght@300;400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300;400&family=Bellefair&family=Lato:wght@300;400;700&display=swap');
 
 @layer base {
     body {
@@ -14,5 +14,10 @@
     li {
         @apply px-4;
         @apply list-none
-    }
+    }   
+}
+
+
+.condensed {
+    font-family: 'Barlow Condensed', sans-serif
 }
